added some headers

--- a/_sass/minimal-mistakes/_buttons.scss
+++ b/_sass/minimal-mistakes/_buttons.scss
@@ -40,6 +40,7 @@
   (facebook, $facebook-color),
   (twitter, $twitter-color),
   (reddit, #ff4500),
+  (email, $email-color),
   (linkedin, $linkedin-color);
   
 
