--- a/_sass/minimal-mistakes/_buttons.scss
+++ b/_sass/minimal-mistakes/_buttons.scss
@@ -39,7 +39,7 @@
   (info, $info-color),
   (facebook, $facebook-color),
   (twitter, $twitter-color),
-  (reddit, #ff4500),
+  (reddit, $reddit-color),
   (email, $email-color),
   (linkedin, $linkedin-color);
   
