added fediverse creator tag

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,5 +17,5 @@
     {% endunless %}
   </ul>
 </div>
-
+<meta name="fediverse:creator" content="@mialikescoffee@social.tchncs.de">
 <div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.   |  <a href="https://mialikescoffee.com/impressum" rel="nofollow">Impressum</a> | <a href="https://mialikescoffee.com/datenschutz" rel="nofollow">Datenschutz</a></div>
