--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -3,9 +3,25 @@
     <h4 class="page__share-title">{{ site.data.ui-text[site.locale].share_on_label | default: "Share on" }}</h4>
   {% endif %}
 
+  <!-- Bluesky (via bsky.app) -->
+  <a href="https://bsky.app/intent/compose?text={{ page.title | uri_escape }}%20{{ page.url | absolute_url | uri_escape }}" class="btn btn--bluesky" title="{{ site.data.ui-text[site.locale].share_on_label | default: 'Share on' }} Bluesky" target="_blank" rel="noopener">
+    <i class="fab fa-bluesky" aria-hidden="true"></i><span> Bluesky</span>
+  </a>
+
+  <!-- Mastodon (generic) -->
+  <a href="https://toot.kytta.dev/?text={{ page.title | uri_escape }}%20{{ page.url | absolute_url | uri_escape }}"
+    class="btn btn--mastodon"
+    title="Share on Mastodon"
+    rel="noopener"
+    target="_blank">
+    <i class="fab fa-mastodon" aria-hidden="true"></i><span> Mastodon</span>
+  </a>
+
+  <!-- LinkedIn -->
   <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ page.url | absolute_url | url_encode }}" class="btn btn--linkedin" onclick="window.open(this.href, 'window', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" title="{{ site.data.ui-text[site.locale].share_on_label | default: 'Share on' }} LinkedIn"><i class="fab fa-fw fa-linkedin" aria-hidden="true"></i><span> LinkedIn</span></a>
 
+  <!-- Email-->
   <a href="mailto:?subject={{ page.title }}&body=Check out this article: {{ page.title }} - {{ page.url | absolute_url }}" class="btn btn--info" title="{{ site.data.ui-text[site.locale].share_on_label | default: 'Share via' }} Email"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i><span> Email</span></a>
-  
+
 </section>
 
